--- a/app/views/slurrystorage/current/applicant-details.html
+++ b/app/views/slurrystorage/current/applicant-details.html
@@ -44,9 +44,9 @@
           <label class="govuk-label" for="farmer-email">
               Email address
               <div id="event-name-hint" class="govuk-hint">
-              {% if data['applicant'] === "Agent" %} We'll only use this to send them confirmation
+              {% if data['applicant'] === "Agent" %} We will only use this to send them confirmation
                          {% else %}
-                         We'll only use this to send you confirmation
+                         We will only use this to send you confirmation
                          {% endif %}
               </div>
 
