--- a/app/views/slurrystorage/current/covers-fail.html
+++ b/app/views/slurrystorage/current/covers-fail.html
@@ -26,7 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Stores must have impermeable cover unless the slurry is treated with acidification.<br><br></p>
+      <p class="govuk-body">Stores must have an impermeable cover unless the slurry is treated with acidification.<br><br></p>
 
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
