--- a/app/views/slurrystorage/current/guidance.html
+++ b/app/views/slurrystorage/current/guidance.html
@@ -79,10 +79,9 @@
 <p>You’ll need:</p>
 <ul>
   <li>information about your business (for example, number of employees, turnover)</li>
-  <li>information about the project (for example, the type of storage, the capacity, the type of cover)</li>
+  <li>information about the project (for example, the type of storage, the capacity, the type of cover, the OS grid reference)</li>
   <li>a list of the items you’d like to buy for the project</li>
-  <li>an estimate of the total cost of the items</li>
-</ul>
+  </ul>
 
 <p>After you have gone through the checker, you’ll get a score showing how well your project fits the funding priorities.</p>
 <p>RPA wants to fund projects that: </p>
