--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -66,10 +66,9 @@
       <p>To  use the checker,  you need:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
-        <li>information about the project (for example, the type of storage, the volume, the type of cover)</li>
+        <li>information about the project (for example, the type of storage, the capacity, the type of cover, the OS grid reference)</li>
         <li>a list of the items you’d like to buy for the project</li>
-        <li>an estimate of the total cost of the items</li>
-      </ul>
+        </ul>
       <p class="govuk-body govuk-!-margin-bottom-8">If you do not enter any information for more than 20 minutes, your
 application will time out and you  will have to start again. </p>
     </div>
