--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -100,9 +100,9 @@
 
 
       <br>  <p> <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
-        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-    Change your items
-  </button></p>
+        <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+         class="govuk-button govuk-button--secondary" data-module="govuk-button">Change your items
+       </button></p>
 
       </form>
   </div>
