--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -26,11 +26,11 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-     <div class="govuk-body">
+
        <form id="mainForm" class="form" action="current-storage-capacity" method="post">
 
          <div class="govuk-form-group">
-        <h1>Standardised costs</h1>
+        <h2 class="govuk-heading-l">Standardised costs</h1>
         <ul class="govuk-list govuk-list--bullet">
           <li>text here to write later</li>
           <li>more text here to write later</li>
@@ -50,5 +50,5 @@
 
   </div>
 </div>
-</div>
+
 {% endblock %}
