--- a/app/views/slurrystorage/current/future-storage-capacity.html
+++ b/app/views/slurrystorage/current/future-storage-capacity.html
@@ -49,8 +49,11 @@ Current storage capacity
     <div class="govuk-grid-column-one-third">
 
       <div class="app-step-nav-related app-step-nav-related--singular">
+        <h1 class="app-step-nav-related__heading">
+          <span class="govuk-heading-m">Your project items</span>
+          </h1>
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Storage selected</span>
+          <span class="app-step-nav-related__pretitle">Storage </span>
           </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
