--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -28,6 +28,10 @@
         <p class='govuk-list app-list--definition'>
         <a href='#' class="govuk-link--no-visited-state">Confirmation email</a><br>
           User will receive a confirmation email, with their answers. Service is routed by GOV Notify.</p>
+
+          <p class='govuk-list app-list--definition'>
+          <a href='slurrystorage/current/standardised-costs' class="govuk-link--no-visited-state">Standardised costs</a><br>
+            Mini-journey where we work out the project spec based on standardised costs.</p>
       </div>
 
       <div class="proto-admin">
