--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -106,8 +106,11 @@ What type of cover will you have?
     <div class="govuk-grid-column-one-third">
 
       <div class="app-step-nav-related app-step-nav-related--singular">
+        <h1 class="app-step-nav-related__heading">
+          <span class="govuk-heading-m">Your project items</span>
+          </h1>
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Storage selected</span>
+          <span class="app-step-nav-related__pretitle">Storage</span>
           </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
@@ -122,7 +125,7 @@ What type of cover will you have?
         </div>
         <div>
           <h2 class="app-step-nav-related__heading">
-            <span class="app-step-nav-related__pretitle">Type of store selected</span>
+            <span class="app-step-nav-related__pretitle">Store type</span>
             </h2>
           <nav role="navigation" aria-labelledby="subsection-title">
             <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
@@ -136,18 +139,32 @@ What type of cover will you have?
           </div>
           <div>
             <h2 class="app-step-nav-related__heading">
-              <span class="app-step-nav-related__pretitle">Type of cover selected</span>
+              <span class="app-step-nav-related__pretitle">Cover type</span>
               </h2>
             <nav role="navigation" aria-labelledby="subsection-title">
               <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
                 <li>
                   {{ data['covertype'] }}
                 </li>
-                
+
               </ul>
 
             </nav>
             </div>
+            <div>
+              <h2 class="app-step-nav-related__heading">
+                <span class="app-step-nav-related__pretitle">Cover size</span>
+                </h2>
+              <nav role="navigation" aria-labelledby="subsection-title">
+                <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
+                  <li>
+                    {{ data['cover-size'] }} m<sup>2</sup>
+                  </li>
+
+                </ul>
+
+              </nav>
+              </div>
 
       </div>
 
