--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -38,49 +38,49 @@ What type of cover will you have?
 
                   items: [
                 {
-                  value: "Agitator",
+                  value: "agitator",
                   text: "Agitator",
-                  checked: checked("projectitems", "Agitator"),
+                  checked: checked("projectitems", "agitator"),
                   hint: {
                     text: "Item cost: £1,000"
                   }
                 },
                 {
-                  value: "Under-floor storage and transfer channels",
+                  value: "underFloorStorage",
                   text: "Under-floor storage and transfer channels",
-                  checked: checked("projectitems", "Under-floor storage and transfer channels"),
+                  checked: checked("projectitems", "underFloorStorage"),
                   hint: {
                     text: "Item cost: £2,100"
                   }
                 },
                 {
-                  value: "Reception tanks/pits",
+                  value: "receptionTanksPits",
                   text: "Reception tanks/pits",
-                  checked: checked("projectitems", "Reception tanks/pits"),
+                  checked: checked("projectitems", "receptionTanksPits"),
                   hint: {
                     text: "Item cost: £3,250"
                   }
                 },
                 {
-                  value: "Ladders and platforms",
+                  value: "laddersPlatforms",
                   text: "Ladders and platforms",
-                  checked: checked("projectitems", "Ladders and platforms"),
+                  checked: checked("projectitems", "laddersPlatforms"),
                   hint: {
                     text: "Item cost: £4,550"
                   }
                 },
                 {
-                  value: "Agitator platform",
+                  value: "agitatorPlatform",
                   text: "Agitator platform",
-                  checked: checked("projectitems", "Agitator platform"),
+                  checked: checked("projectitems", "agitatorPlatform"),
                   hint: {
                     text: "Item cost: £3,190"
                   }
                 },
                 {
-                  value: "Health and safety features",
+                  value: "healthSafetyFeatures",
                   text: "Health and safety features",
-                  checked: checked("projectitems", "Health and safety features"),
+                  checked: checked("projectitems", "healthSafetyFeatures"),
                   hint: {
                     html: "For example, gas monitor, tyre ladders<br>Item cost: £2,440"
                   }
