--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -55,18 +55,20 @@
     </tr>
 
     {% for item in data['projectitems'] %}
-    <tr class="govuk-table__row"></tr>
-      <th scope="row" class="govuk-table__header">{{projectItemsCost[item].text}}</th>
-      <td class="govuk-table__cell">£{{projectItemsCost[item].value}}</td>
-      <td class="govuk-table__cell">
-        <select class="govuk-select" id="sort" name="sort">
-          <option value="published">0</option>
-          <option value="updated" selected>1</option>
-          <option value="views">2</option>
-          <option value="comments">3</option>
-        </select>
-      </td>
-    </tr>
+      {% if item in projectItemsCost %}
+      <tr class="govuk-table__row"></tr>
+        <th scope="row" class="govuk-table__header">{{projectItemsCost[item].text}}</th>
+        <td class="govuk-table__cell">£{{projectItemsCost[item].value}}</td>
+        <td class="govuk-table__cell">
+          <select class="govuk-select" id="sort" name="sort">
+            <option value="published">0</option>
+            <option value="updated" selected>1</option>
+            <option value="views">2</option>
+            <option value="comments">3</option>
+          </select>
+        </td>
+      </tr>
+      {% endif %}
     {% endfor %}
 
     <tr class="govuk-table__row">
